finish cleansing and get list of fiction intersection

--- a/CleanTunwalai.ipynb
+++ b/CleanTunwalai.ipynb
@@ -284,7 +284,7 @@
     "df_obj = df.select_dtypes(['object'])\n",
     "df[df_obj.columns] = df_obj.apply(lambda x: x.str.strip())\n",
     "\n",
-    "wordlist = '&#039;|&amp;|&bull;|&hearts;|&quot;'\n",
+    "wordlist = '&#039;|&amp;|&bull;|&hearts;|&quot;|&lt;'\n",
     "df['title'] = df['title'].str.replace(wordlist, '')\n",
     "df['author'] = df['author'].str.replace(wordlist, '')\n",
     "df"
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -655,27 +655,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>129</th>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "      <td>ความลับของหัวใจฉันคือรักเธอ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>386</th>\n",
-       "      <td>Just U ♥</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>จัสยูยิมเซย์</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>774</th>\n",
-       "      <td>[Yaoi&amp;NC18+]</td>\n",
-       "      <td>พี่ครับ</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>พี่ครับผม</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>814</th>\n",
-       "      <td>[แฟนฟิค] 2 : PM Deadline...บ่ายสอง</td>\n",
+       "      <td>แฟนฟิค</td>\n",
        "      <td>บ่ายสองต้องรอด</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>991</th>\n",
-       "      <td>GOT7 WICKED</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>ฟิคเด็กเถื่อน</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -685,27 +685,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>155966</th>\n",
-       "      <td>[Omegaverse]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>ภรรยาผมดุมาก</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>155970</th>\n",
-       "      <td>Just Friend</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>หยิ่นวอร์</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>155975</th>\n",
-       "      <td>fic re:zero แด่เธอ</td>\n",
+       "      <td>แด่เธอ</td>\n",
        "      <td>เรม</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>156010</th>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "      <td>คู่หมั้นตามใจแม่มบ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>156027</th>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "      <td>อาถรรพ์ห้ามรัก</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -714,23 +714,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                                  new_title                      hashtag\n",
-       "129                                          ความลับของหัวใจฉันคือรักเธอ\n",
-       "386                               Just U ♥                  จัสยูยิมเซย์\n",
-       "774                           [Yaoi&NC18+]                       พี่ครับ\n",
-       "814     [แฟนฟิค] 2 : PM Deadline...บ่ายสอง                บ่ายสองต้องรอด\n",
-       "991                            GOT7 WICKED                 ฟิคเด็กเถื่อน\n",
-       "...                                     ...                          ...\n",
-       "155966                        [Omegaverse]                  ภรรยาผมดุมาก\n",
-       "155970                         Just Friend                     หยิ่นวอร์\n",
-       "155975                   fic re:zero แด่เธอ                          เรม\n",
-       "156010                                                คู่หมั้นตามใจแม่มบ\n",
-       "156027                                                    อาถรรพ์ห้ามรัก\n",
+       "       new_title                      hashtag\n",
+       "129          NaN  ความลับของหัวใจฉันคือรักเธอ\n",
+       "386          NaN                 จัสยูยิมเซย์\n",
+       "774          NaN                    พี่ครับผม\n",
+       "814       แฟนฟิค               บ่ายสองต้องรอด\n",
+       "991          NaN                ฟิคเด็กเถื่อน\n",
+       "...          ...                          ...\n",
+       "155966       NaN                 ภรรยาผมดุมาก\n",
+       "155970       NaN                    หยิ่นวอร์\n",
+       "155975    แด่เธอ                          เรม\n",
+       "156010       NaN           คู่หมั้นตามใจแม่มบ\n",
+       "156027       NaN               อาถรรพ์ห้ามรัก\n",
        "\n",
        "[5210 rows x 2 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,8 +738,16 @@
    "source": [
     "df3 = pd.DataFrame(df.title.str.split(r'#.*?(?=\\S|$)',1).tolist(), \n",
     "                         columns = ['new_title','hashtag'])\n",
-    "#df3['hashtag'] = df3['hashtag'].str.extract('([\\ก-\\๙]+)')\n",
-    "#df3['new_title'] = df3['new_title'].str.extract('([\\ก-\\๙]+)')\n",
+    "df3['new_title'] = df3['new_title'].str.replace(' ', '')\n",
+    "df3['hashtag'] = df3['hashtag'].str.replace(' ', '')\n",
+    "\n",
+    "df3['new_title'] = df3['new_title'].str.replace('.', '')\n",
+    "df3['hashtag'] = df3['hashtag'].str.replace('.', '')\n",
+    "\n",
+    "#df[['new_title','hashtag']] = df.title.str.split(r'#.*?(?=\\s|$)',expand = True) \n",
+    "\n",
+    "df3['hashtag'] = df3['hashtag'].str.extract(r'([\\ก-\\๙]+)')\n",
+    "df3['new_title'] = df3['new_title'].str.extract(r'([\\ก-\\๙]+)')\n",
     "df3[df3['hashtag'].str.contains('') == True]"
    ]
   },
@@ -756,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +815,7 @@
        "      <td>NaN</td>\n",
        "      <td>พิศวาสสีรุ้ง {วางแผงแล้วค่ะ}</td>\n",
        "      <td>27,928</td>\n",
-       "      <td>พิศวาสสีรุ้ง {วางแผงแล้วค่ะ}</td>\n",
+       "      <td>พิศวาสสีรุ้ง</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -822,7 +830,7 @@
        "      <td>NaN</td>\n",
        "      <td>ภรรยาจำยอม (วางแผงแล้วค่ะ)</td>\n",
        "      <td>89,151</td>\n",
-       "      <td>ภรรยาจำยอม (วางแผงแล้วค่ะ)</td>\n",
+       "      <td>ภรรยาจำยอม</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -852,7 +860,7 @@
        "      <td>NaN</td>\n",
        "      <td>หลุมพรางนางฟ้า ชุดปฏิญญารักมาเฟีย</td>\n",
        "      <td>9,416</td>\n",
-       "      <td>หลุมพรางนางฟ้า ชุดปฏิญญารักมาเฟีย</td>\n",
+       "      <td>หลุมพรางนางฟ้าชุดปฏิญญารักมาเฟีย</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -867,7 +875,7 @@
        "      <td>soul mate,โชคชะตา,นิยายสนุกๆ,พระเอกน่ารัก,นางเ...</td>\n",
        "      <td>SOUL MATE : โชคชะตาพาให้รัก  .</td>\n",
        "      <td>5,555</td>\n",
-       "      <td>SOUL MATE : โชคชะตาพาให้รัก  .</td>\n",
+       "      <td>โชคชะตาพาให้รัก</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -897,7 +905,7 @@
        "      <td>NaN</td>\n",
        "      <td>ธำมรงค์ดวงหฤทัย👑</td>\n",
        "      <td>4</td>\n",
-       "      <td>ธำมรงค์ดวงหฤทัย👑</td>\n",
+       "      <td>ธำมรงค์ดวงหฤทัย</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -927,7 +935,7 @@
        "      <td>norenmin,jeno,jaemin,renjun</td>\n",
        "      <td>real me - (norenmin)</td>\n",
        "      <td>7</td>\n",
-       "      <td>real me - (norenmin)</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -942,7 +950,7 @@
        "      <td>รักร้ายๆ แนว โรแมนติก - ดราม่า - คอมเมดี</td>\n",
        "      <td>ร้อยเล่ห์เสน่ห์รัก NC30+++</td>\n",
        "      <td>34</td>\n",
-       "      <td>ร้อยเล่ห์เสน่ห์รัก NC30+++</td>\n",
+       "      <td>ร้อยเล่ห์เสน่ห์รัก</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -957,7 +965,7 @@
        "      <td>,อาถรรพ์ห้ามรัก,PJN,เฌอสิค,ปัญเจนนิษฐ์,อรตาหวา...</td>\n",
        "      <td>#อาถรรพ์ห้ามรัก | PJN【BNK48】</td>\n",
        "      <td>0</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "      <td>อาถรรพ์ห้ามรัก</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1018,23 +1026,23 @@
        "156026         ร้อยเล่ห์เสน่ห์รัก NC30+++         34   \n",
        "156027       #อาถรรพ์ห้ามรัก | PJN【BNK48】          0   \n",
        "\n",
-       "                                new_title         hashtag  \n",
-       "0            พิศวาสสีรุ้ง {วางแผงแล้วค่ะ}             NaN  \n",
-       "1              ภรรยาจำยอม (วางแผงแล้วค่ะ)             NaN  \n",
-       "2                           ราคีสีน้ำผึ้ง             NaN  \n",
-       "3       หลุมพรางนางฟ้า ชุดปฏิญญารักมาเฟีย             NaN  \n",
-       "4          SOUL MATE : โชคชะตาพาให้รัก  .             NaN  \n",
-       "...                                   ...             ...  \n",
-       "156023                   ธำมรงค์ดวงหฤทัย👑             NaN  \n",
-       "156024                  หนุ่มน้อยตู้กระจก             NaN  \n",
-       "156025               real me - (norenmin)             NaN  \n",
-       "156026         ร้อยเล่ห์เสน่ห์รัก NC30+++             NaN  \n",
-       "156027                                     อาถรรพ์ห้ามรัก  \n",
+       "                               new_title         hashtag  \n",
+       "0                           พิศวาสสีรุ้ง             NaN  \n",
+       "1                             ภรรยาจำยอม             NaN  \n",
+       "2                          ราคีสีน้ำผึ้ง             NaN  \n",
+       "3       หลุมพรางนางฟ้าชุดปฏิญญารักมาเฟีย             NaN  \n",
+       "4                        โชคชะตาพาให้รัก             NaN  \n",
+       "...                                  ...             ...  \n",
+       "156023                   ธำมรงค์ดวงหฤทัย             NaN  \n",
+       "156024                 หนุ่มน้อยตู้กระจก             NaN  \n",
+       "156025                               NaN             NaN  \n",
+       "156026                ร้อยเล่ห์เสน่ห์รัก             NaN  \n",
+       "156027                               NaN  อาถรรพ์ห้ามรัก  \n",
        "\n",
        "[156028 rows x 12 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1145,7 @@
        "      <td>Misstep</td>\n",
        "      <td>Misstep สัสจริงๆ รักคนอย่างมึง [Yaoi]</td>\n",
        "      <td>234,469</td>\n",
-       "      <td>Misstep สัสจริงๆ รักคนอย่างมึง [Yaoi]</td>\n",
+       "      <td>สัสจริงๆรักคนอย่างมึง</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1167,7 +1175,7 @@
        "      <td>NaN</td>\n",
        "      <td>Magic Fox เรื่องหมาหมา [Yaoi -..-]</td>\n",
        "      <td>8,432</td>\n",
-       "      <td>Magic Fox เรื่องหมาหมา [Yaoi -..-]</td>\n",
+       "      <td>เรื่องหมาหมา</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1182,7 +1190,7 @@
        "      <td>Y,Yaoi,เลว,โหด,nc,เกย์,เถื่อน,วาย,รุนแรง,โหด</td>\n",
        "      <td>i'm not &amp; you don't [Yaoi] END - รีปริ้นท์ถึง1...</td>\n",
        "      <td>3,809,811</td>\n",
-       "      <td>i'm not &amp; you don't [Yaoi] END - รีปริ้นท์ถึง1...</td>\n",
+       "      <td>รีปริ้นท์ถึง</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1197,7 +1205,7 @@
        "      <td>ปีเตอร์ ทับทิม สิงคโปร์ คาร์ลตัน</td>\n",
        "      <td>มนต์รักอาเซียน (ใช้ชื่อนี้ไปก่อน ผ่านการพิจรณา...</td>\n",
        "      <td>7,078</td>\n",
-       "      <td>มนต์รักอาเซียน (ใช้ชื่อนี้ไปก่อน ผ่านการพิจรณา...</td>\n",
+       "      <td>มนต์รักอาเซียน</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1227,7 +1235,7 @@
        "      <td>NaN</td>\n",
        "      <td>My wife |เมียผมโหดมากครับ|</td>\n",
        "      <td>45</td>\n",
-       "      <td>My wife |เมียผมโหดมากครับ|</td>\n",
+       "      <td>เมียผมโหดมากครับ</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1272,7 +1280,7 @@
        "      <td>NaN</td>\n",
        "      <td>ธำมรงค์ดวงหฤทัย👑</td>\n",
        "      <td>4</td>\n",
-       "      <td>ธำมรงค์ดวงหฤทัย👑</td>\n",
+       "      <td>ธำมรงค์ดวงหฤทัย</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1348,23 +1356,23 @@
        "48753                                   ธำมรงค์ดวงหฤทัย👑          4   \n",
        "48754                                  หนุ่มน้อยตู้กระจก         21   \n",
        "\n",
-       "                                               new_title hashtag  \n",
-       "0                  Misstep สัสจริงๆ รักคนอย่างมึง [Yaoi]     NaN  \n",
-       "1                                                      ณ     NaN  \n",
-       "2                     Magic Fox เรื่องหมาหมา [Yaoi -..-]     NaN  \n",
-       "3      i'm not & you don't [Yaoi] END - รีปริ้นท์ถึง1...     NaN  \n",
-       "4      มนต์รักอาเซียน (ใช้ชื่อนี้ไปก่อน ผ่านการพิจรณา...     NaN  \n",
-       "...                                                  ...     ...  \n",
-       "48750                         My wife |เมียผมโหดมากครับ|     NaN  \n",
-       "48751                               รักนี้ฉันมีให้แค่นาย     NaN  \n",
-       "48752                                         รับจ้างรัก     NaN  \n",
-       "48753                                   ธำมรงค์ดวงหฤทัย👑     NaN  \n",
-       "48754                                  หนุ่มน้อยตู้กระจก     NaN  \n",
+       "                   new_title hashtag  \n",
+       "0      สัสจริงๆรักคนอย่างมึง     NaN  \n",
+       "1                          ณ     NaN  \n",
+       "2               เรื่องหมาหมา     NaN  \n",
+       "3               รีปริ้นท์ถึง     NaN  \n",
+       "4             มนต์รักอาเซียน     NaN  \n",
+       "...                      ...     ...  \n",
+       "48750       เมียผมโหดมากครับ     NaN  \n",
+       "48751   รักนี้ฉันมีให้แค่นาย     NaN  \n",
+       "48752             รับจ้างรัก     NaN  \n",
+       "48753        ธำมรงค์ดวงหฤทัย     NaN  \n",
+       "48754      หนุ่มน้อยตู้กระจก     NaN  \n",
        "\n",
        "[48755 rows x 12 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,14 +1380,14 @@
    "source": [
     "boyslove = df4[df4['category'].str.contains('นิยาย y')]\n",
     "boyslove.reset_index(drop=True, inplace=True)\n",
-    "#boyslove.to_csv('tunwalai_y.csv',encoding='utf-8')\n",
+    "#boyslove.to_csv('tunwalai_y2.csv',encoding='utf-8')\n",
     "\n",
     "boyslove"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1440,7 @@
        "      <td>Misstep</td>\n",
        "      <td>Misstep สัสจริงๆ รักคนอย่างมึง [Yaoi]</td>\n",
        "      <td>234,469</td>\n",
-       "      <td>Misstep สัสจริงๆ รักคนอย่างมึง [Yaoi]</td>\n",
+       "      <td>สัสจริงๆรักคนอย่างมึง</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1464,7 +1472,7 @@
        "      <td>NaN</td>\n",
        "      <td>Magic Fox เรื่องหมาหมา [Yaoi -..-]</td>\n",
        "      <td>8,432</td>\n",
-       "      <td>Magic Fox เรื่องหมาหมา [Yaoi -..-]</td>\n",
+       "      <td>เรื่องหมาหมา</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1480,7 +1488,7 @@
        "      <td>Y,Yaoi,เลว,โหด,nc,เกย์,เถื่อน,วาย,รุนแรง,โหด</td>\n",
        "      <td>i'm not &amp; you don't [Yaoi] END - รีปริ้นท์ถึง1...</td>\n",
        "      <td>3,809,811</td>\n",
-       "      <td>i'm not &amp; you don't [Yaoi] END - รีปริ้นท์ถึง1...</td>\n",
+       "      <td>รีปริ้นท์ถึง</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1496,7 +1504,7 @@
        "      <td>ปีเตอร์ ทับทิม สิงคโปร์ คาร์ลตัน</td>\n",
        "      <td>มนต์รักอาเซียน (ใช้ชื่อนี้ไปก่อน ผ่านการพิจรณา...</td>\n",
        "      <td>7,078</td>\n",
-       "      <td>มนต์รักอาเซียน (ใช้ชื่อนี้ไปก่อน ผ่านการพิจรณา...</td>\n",
+       "      <td>มนต์รักอาเซียน</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1528,7 +1536,7 @@
        "      <td>NaN</td>\n",
        "      <td>My wife |เมียผมโหดมากครับ|</td>\n",
        "      <td>45</td>\n",
-       "      <td>My wife |เมียผมโหดมากครับ|</td>\n",
+       "      <td>เมียผมโหดมากครับ</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1576,7 +1584,7 @@
        "      <td>NaN</td>\n",
        "      <td>ธำมรงค์ดวงหฤทัย👑</td>\n",
        "      <td>4</td>\n",
-       "      <td>ธำมรงค์ดวงหฤทัย👑</td>\n",
+       "      <td>ธำมรงค์ดวงหฤทัย</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1653,29 +1661,29 @@
        "48753                                   ธำมรงค์ดวงหฤทัย👑          4   \n",
        "48754                                  หนุ่มน้อยตู้กระจก         21   \n",
        "\n",
-       "                                               new_title hashtag  \n",
-       "0                  Misstep สัสจริงๆ รักคนอย่างมึง [Yaoi]     NaN  \n",
-       "1                                                      ณ     NaN  \n",
-       "2                     Magic Fox เรื่องหมาหมา [Yaoi -..-]     NaN  \n",
-       "3      i'm not & you don't [Yaoi] END - รีปริ้นท์ถึง1...     NaN  \n",
-       "4      มนต์รักอาเซียน (ใช้ชื่อนี้ไปก่อน ผ่านการพิจรณา...     NaN  \n",
-       "...                                                  ...     ...  \n",
-       "48750                         My wife |เมียผมโหดมากครับ|     NaN  \n",
-       "48751                               รักนี้ฉันมีให้แค่นาย     NaN  \n",
-       "48752                                         รับจ้างรัก     NaN  \n",
-       "48753                                   ธำมรงค์ดวงหฤทัย👑     NaN  \n",
-       "48754                                  หนุ่มน้อยตู้กระจก     NaN  \n",
+       "                   new_title hashtag  \n",
+       "0      สัสจริงๆรักคนอย่างมึง     NaN  \n",
+       "1                          ณ     NaN  \n",
+       "2               เรื่องหมาหมา     NaN  \n",
+       "3               รีปริ้นท์ถึง     NaN  \n",
+       "4             มนต์รักอาเซียน     NaN  \n",
+       "...                      ...     ...  \n",
+       "48750       เมียผมโหดมากครับ     NaN  \n",
+       "48751   รักนี้ฉันมีให้แค่นาย     NaN  \n",
+       "48752             รับจ้างรัก     NaN  \n",
+       "48753        ธำมรงค์ดวงหฤทัย     NaN  \n",
+       "48754      หนุ่มน้อยตู้กระจก     NaN  \n",
        "\n",
        "[48755 rows x 13 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = pd.read_csv(r'C:\\Users\\paton\\Pick2ReadData\\tunwalai_y.csv')\n",
+    "test = pd.read_csv(r'C:\\Users\\paton\\Pick2ReadData\\tunwalai_y1.csv')\n",
     "test"
    ]
   },
