title search for twitter is available

--- a/CleanTunwalai.ipynb
+++ b/CleanTunwalai.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RangeIndex(start=0, stop=156047, step=1)"
+       "RangeIndex(start=0, stop=156028, step=1)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,15 +22,16 @@
     "import string\n",
     "import re\n",
     "\n",
-    "df = pd.read_csv(r'C:\\Users\\paton\\Pick2ReadData\\Data\\tunwalai.csv')\n",
-    "del df['description']\n",
-    "del df['favouriteCount']\n",
+    "df = pd.read_csv(r'C:\\Users\\paton\\Pick2ReadData\\Data\\tunwalai1.csv')\n",
+    "#del df['description']\n",
+    "#del df['favouriteCount']\n",
+    "df.drop('Unnamed: 0', axis=1, inplace=True)\n",
     "df.index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -271,13 +272,13 @@
        "[156028 rows x 10 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.dropna(subset=['title', 'category','author'],inplace=True)\n",
+    "\"\"\"df.dropna(subset=['title', 'category','author'],inplace=True)\n",
     "df.reset_index(drop=True, inplace=True)\n",
     "df.drop_duplicates()\n",
     "\n",
@@ -287,12 +288,13 @@
     "wordlist = '&#039;|&amp;|&bull;|&hearts;|&quot;|&lt;'\n",
     "df['title'] = df['title'].str.replace(wordlist, '')\n",
     "df['author'] = df['author'].str.replace(wordlist, '')\n",
+    "\"\"\"\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -316,6 +318,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>author</th>\n",
        "      <th>category</th>\n",
        "      <th>commentCount</th>\n",
@@ -331,6 +334,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>129</th>\n",
+       "      <td>129</td>\n",
        "      <td># [ Ccurstrandcake ]</td>\n",
        "      <td>นิยาย รักวัยรุ่น</td>\n",
        "      <td>15</td>\n",
@@ -347,20 +351,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                   author          category commentCount isComplete numOfchap  \\\n",
-       "129  # [ Ccurstrandcake ]  นิยาย รักวัยรุ่น           15        NaN         4   \n",
+       "     Unnamed: 0                author          category commentCount  \\\n",
+       "129         129  # [ Ccurstrandcake ]  นิยาย รักวัยรุ่น           15   \n",
        "\n",
-       "                                                   pic ratingCount  \\\n",
-       "129  https://cdn-th.tunwalai.net/files/story/story-...         270   \n",
+       "    isComplete numOfchap                                                pic  \\\n",
+       "129        NaN         4  https://cdn-th.tunwalai.net/files/story/story-...   \n",
        "\n",
-       "                      tag                                              title  \\\n",
-       "129  Secrets of the heart  # Secrets of the heart ความลับของหัวใจฉันคือรั...   \n",
+       "    ratingCount                   tag  \\\n",
+       "129         270  Secrets of the heart   \n",
        "\n",
-       "    viewer  \n",
-       "129  6,738  "
+       "                                                 title viewer  \n",
+       "129  # Secrets of the heart ความลับของหัวใจฉันคือรั...  6,738  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -395,6 +399,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>author</th>\n",
        "      <th>category</th>\n",
        "      <th>commentCount</th>\n",
@@ -410,6 +415,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>129</th>\n",
+       "      <td>129</td>\n",
        "      <td># [ Ccurstrandcake ]</td>\n",
        "      <td>นิยาย รักวัยรุ่น</td>\n",
        "      <td>15</td>\n",
@@ -423,6 +429,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>386</th>\n",
+       "      <td>386</td>\n",
        "      <td>พี่ติ๊ส.</td>\n",
        "      <td>นิยาย y</td>\n",
        "      <td>80</td>\n",
@@ -436,6 +443,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>773</th>\n",
+       "      <td>773</td>\n",
        "      <td>CHIXMA</td>\n",
        "      <td>นิยาย แฟนฟิค</td>\n",
        "      <td>72</td>\n",
@@ -449,6 +457,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>774</th>\n",
+       "      <td>774</td>\n",
        "      <td>blacksummer</td>\n",
        "      <td>นิยาย y</td>\n",
        "      <td>44</td>\n",
@@ -462,6 +471,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>814</th>\n",
+       "      <td>814</td>\n",
        "      <td>garoo-pop</td>\n",
        "      <td>นิยาย y</td>\n",
        "      <td>4</td>\n",
@@ -485,9 +495,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>155970</th>\n",
+       "      <td>155970</td>\n",
        "      <td>✓CAKE✓</td>\n",
        "      <td>นิยาย รักวัยรุ่น</td>\n",
        "      <td>0</td>\n",
@@ -501,6 +513,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>155975</th>\n",
+       "      <td>155975</td>\n",
        "      <td>ม้านิล</td>\n",
        "      <td>นิยาย แฟนฟิค</td>\n",
        "      <td>0</td>\n",
@@ -514,6 +527,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>156000</th>\n",
+       "      <td>156000</td>\n",
        "      <td>Krissaya</td>\n",
        "      <td>นิยาย รักวัยรุ่น</td>\n",
        "      <td>0</td>\n",
@@ -527,6 +541,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>156010</th>\n",
+       "      <td>156010</td>\n",
        "      <td>Monancyy</td>\n",
        "      <td>นิยาย แฟนฟิค</td>\n",
        "      <td>0</td>\n",
@@ -540,6 +555,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>156027</th>\n",
+       "      <td>156027</td>\n",
        "      <td>Arnat</td>\n",
        "      <td>นิยาย แฟนตาซี</td>\n",
        "      <td>0</td>\n",
@@ -553,48 +569,61 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7711 rows × 10 columns</p>\n",
+       "<p>7711 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      author          category commentCount isComplete  \\\n",
-       "129     # [ Ccurstrandcake ]  นิยาย รักวัยรุ่น           15        NaN   \n",
-       "386                 พี่ติ๊ส.           นิยาย y           80        NaN   \n",
-       "773                   CHIXMA      นิยาย แฟนฟิค           72         จบ   \n",
-       "774              blacksummer           นิยาย y           44        NaN   \n",
-       "814                garoo-pop           นิยาย y            4        NaN   \n",
-       "...                      ...               ...          ...        ...   \n",
-       "155970                ✓CAKE✓  นิยาย รักวัยรุ่น            0        NaN   \n",
-       "155975                ม้านิล      นิยาย แฟนฟิค            0        NaN   \n",
-       "156000              Krissaya  นิยาย รักวัยรุ่น            0         จบ   \n",
-       "156010              Monancyy      นิยาย แฟนฟิค            0        NaN   \n",
-       "156027                 Arnat     นิยาย แฟนตาซี            0        NaN   \n",
+       "        Unnamed: 0                author          category commentCount  \\\n",
+       "129            129  # [ Ccurstrandcake ]  นิยาย รักวัยรุ่น           15   \n",
+       "386            386              พี่ติ๊ส.           นิยาย y           80   \n",
+       "773            773                CHIXMA      นิยาย แฟนฟิค           72   \n",
+       "774            774           blacksummer           นิยาย y           44   \n",
+       "814            814             garoo-pop           นิยาย y            4   \n",
+       "...            ...                   ...               ...          ...   \n",
+       "155970      155970                ✓CAKE✓  นิยาย รักวัยรุ่น            0   \n",
+       "155975      155975                ม้านิล      นิยาย แฟนฟิค            0   \n",
+       "156000      156000              Krissaya  นิยาย รักวัยรุ่น            0   \n",
+       "156010      156010              Monancyy      นิยาย แฟนฟิค            0   \n",
+       "156027      156027                 Arnat     นิยาย แฟนตาซี            0   \n",
        "\n",
-       "       numOfchap                                                pic  \\\n",
-       "129            4  https://cdn-th.tunwalai.net/files/story/story-...   \n",
-       "386            6  https://cdn-th.tunwalai.net/files/story/1414/6...   \n",
-       "773           23  https://cdn-th.tunwalai.net/files/story/13034/...   \n",
-       "774           12  https://cdn-th.tunwalai.net/files/story/13054/...   \n",
-       "814            1  https://cdn-th.tunwalai.net/files/story/13184/...   \n",
-       "...          ...                                                ...   \n",
-       "155970         0  https://cdn-th.tunwalai.net/files/story/508868...   \n",
-       "155975         0  https://cdn-th.tunwalai.net/files/story/508881...   \n",
-       "156000         8  https://cdn-th.tunwalai.net/files/story/508946...   \n",
-       "156010         1  https://cdn-th.tunwalai.net/files/story/508963...   \n",
-       "156027         2  https://cdn-th.tunwalai.net/files/story/509008...   \n",
+       "       isComplete numOfchap  \\\n",
+       "129           NaN         4   \n",
+       "386           NaN         6   \n",
+       "773            จบ        23   \n",
+       "774           NaN        12   \n",
+       "814           NaN         1   \n",
+       "...           ...       ...   \n",
+       "155970        NaN         0   \n",
+       "155975        NaN         0   \n",
+       "156000         จบ         8   \n",
+       "156010        NaN         1   \n",
+       "156027        NaN         2   \n",
        "\n",
-       "       ratingCount                                                tag  \\\n",
-       "129            270                               Secrets of the heart   \n",
-       "386            230           yaoi,มัธยม,นิยายy,ชายรักชาย,จัสยูยิมเซย์   \n",
-       "773            364                                                NaN   \n",
-       "774            145             Yaoi , พี่ครับ ผม(ไม่)ชอบผู้ชาย , R18+   \n",
-       "814            105                            2pm, fic, Yaoi, Fic2pm,   \n",
-       "...            ...                                                ...   \n",
-       "155970           0                                         #หยิ่นวอร์   \n",
-       "155975           1                        เรม,rezero,แด่เธอ,fic,anime   \n",
-       "156000           0              𝖸𝖨𝖭𝖶𝖠𝖱,𝖸𝖶𝖯𝖥𝖪,หยิ่นวอร์,Thebestmyheart   \n",
-       "156010           0  มาร์คแบม,#คู่หมั้นตามใจแม่มบ, คู่หมั้นตามใจแม่...   \n",
-       "156027           0  ,อาถรรพ์ห้ามรัก,PJN,เฌอสิค,ปัญเจนนิษฐ์,อรตาหวา...   \n",
+       "                                                      pic ratingCount  \\\n",
+       "129     https://cdn-th.tunwalai.net/files/story/story-...         270   \n",
+       "386     https://cdn-th.tunwalai.net/files/story/1414/6...         230   \n",
+       "773     https://cdn-th.tunwalai.net/files/story/13034/...         364   \n",
+       "774     https://cdn-th.tunwalai.net/files/story/13054/...         145   \n",
+       "814     https://cdn-th.tunwalai.net/files/story/13184/...         105   \n",
+       "...                                                   ...         ...   \n",
+       "155970  https://cdn-th.tunwalai.net/files/story/508868...           0   \n",
+       "155975  https://cdn-th.tunwalai.net/files/story/508881...           1   \n",
+       "156000  https://cdn-th.tunwalai.net/files/story/508946...           0   \n",
+       "156010  https://cdn-th.tunwalai.net/files/story/508963...           0   \n",
+       "156027  https://cdn-th.tunwalai.net/files/story/509008...           0   \n",
+       "\n",
+       "                                                      tag  \\\n",
+       "129                                  Secrets of the heart   \n",
+       "386              yaoi,มัธยม,นิยายy,ชายรักชาย,จัสยูยิมเซย์   \n",
+       "773                                                   NaN   \n",
+       "774                Yaoi , พี่ครับ ผม(ไม่)ชอบผู้ชาย , R18+   \n",
+       "814                               2pm, fic, Yaoi, Fic2pm,   \n",
+       "...                                                   ...   \n",
+       "155970                                         #หยิ่นวอร์   \n",
+       "155975                        เรม,rezero,แด่เธอ,fic,anime   \n",
+       "156000              𝖸𝖨𝖭𝖶𝖠𝖱,𝖸𝖶𝖯𝖥𝖪,หยิ่นวอร์,Thebestmyheart   \n",
+       "156010  มาร์คแบม,#คู่หมั้นตามใจแม่มบ, คู่หมั้นตามใจแม่...   \n",
+       "156027  ,อาถรรพ์ห้ามรัก,PJN,เฌอสิค,ปัญเจนนิษฐ์,อรตาหวา...   \n",
        "\n",
        "                                                    title  viewer  \n",
        "129     # Secrets of the heart ความลับของหัวใจฉันคือรั...   6,738  \n",
@@ -609,10 +638,10 @@
        "156010                     #คู่หมั้นตามใจแม่มบ - มาร์คแบม      20  \n",
        "156027                       #อาถรรพ์ห้ามรัก | PJN【BNK48】       0  \n",
        "\n",
-       "[7711 rows x 10 columns]"
+       "[7711 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +759,7 @@
        "[5210 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1071,7 @@
        "[156028 rows x 12 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1069,7 +1098,7 @@
        "5210"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,11 +1114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df4.to_csv('tunwalai_full_hash_v2.csv')"
+    "#df4.to_csv('tunwalai_full_hash_v3.csv')"
    ]
   },
   {
